# vi

./: .gitignore  CMakeLists.txt  vi.props
vi/: common.h  timing.h  vi_timing_proxy.h
vi_timing/: CMakeLists.txt  GenerateVersion.cmake  common.h  timing.h  timing_v2.h  version.h  version.h.in  version.in  version.out  vi_timing.h  vi_timing.hpp  vi_timing.props  vi_timing.pvsconfig  vi_timing.suppress  vi_timing_c.h  vi_timing_proxy.h  Статья vi_Timing.docx
vi_timing/source/: CMakeLists.txt  build_number.h  build_number_maker.cpp  build_number_maker.h  clock.cpp  duration.cpp  duration.h  internal.h  misc.cpp  misc.h  pch.cpp  pch.hpp  props.cpp  report.cpp  temp.c  timing.cpp  timing_aux.cpp  timing_mt.cpp  timing_v2.cpp  version.cpp  version.h  version.rc  vi_timing.h.in  welford_alg.cpp  welford_alg.h
vi_timing/test/: CMakeLists.txt  header.h  main.cpp  source.c  test.cpp  vi_timing_test.pvsconfig  vi_timing_test.suppress
vi_timing/vi/: common.h  timing.h  vi_timing_proxy.h
